--- a/throws_master.sh.in
+++ b/throws_master.sh.in
@@ -30,7 +30,7 @@ SYSTLIST_SANIT=$(echo $SYSTLIST | tr ':' '_' | tr '=' '-')
 OSCVARS_SANIT=$(echo $OSCVARS | tr ':' '_')
 JOBNAME_SANIT=$(echo $JOBNAME | tr ' ' '_')
 export OUSERDIR=${USER}
-OUTDIR=/project/projectdirs/dune/users/${OUSERDIR}/${JOBNAME_SANIT}/${CAFEEXE}/syst_${SYSTLIST_SANIT}/osc_${OSCVARS_SANIT}/samp_${SAMPLELIST}/pen_${PENALTY}/hie_${HIERARCHY}/$(date "+%Y_%m_%d-%H_%M_%S")/${SLURM_JOB_ID}
+OUTDIR=/project/projectdirs/dune/users/${OUSERDIR}/CAFAnaJobOutput/${JOBNAME_SANIT}/syst_${SYSTLIST_SANIT}/osc_${OSCVARS_SANIT}/samp_${SAMPLELIST}/pen_${PENALTY}/hie_${HIERARCHY}/$(date "+%Y_%m_%d-%H_%M_%S")/${SLURM_JOB_ID}
 mkdir -p ${OUTDIR}
 #SRUNLOGFILE="${OUTDIR}/throws_%t.log"
 SRUNLOGFILE=/dev/null
