--- a/throws_master.sh.in
+++ b/throws_master.sh.in
@@ -41,15 +41,15 @@ IMG="picker24/dune_cafana:SLS_wsf_wdeps_03bf817"
 #centos based cvmfs
 #IMG="picker24/dune_cafana:SLS_wsf"
 
-SCRIPTLOC=$(readlink -f run_throws.sh)
+SCRIPT="./run_throws.sh"
 if [ "__USEVQUIET__" == "1" ]; then
-  SCRIPTLOC=$(readlink -f run_throws_veryquiet.sh)
+SCRIPT="./run_throws_veryquiet.sh"
 fi
 
 NTASKSTOTAL=$(( __TASKSPERNODE__ * __NNODES__ ))
 NCORESPERTASK=$(( 64 / __TASKSPERNODE__ ))
 
-echo "[INFO]: Running ${NTASKSTOTAL} ${SCRIPTLOC} tasks, over __NNODES__, each with ${NCORESPERTASK} dedicated hyperthreads."
+echo "[INFO]: Running ${NTASKSTOTAL} ${SCRIPT} tasks, over __NNODES__, each with ${NCORESPERTASK} dedicated hyperthreads."
 
              # Tasks handle their own logging
 srun -n ${NTASKSTOTAL} -c ${NCORESPERTASK} \
@@ -58,4 +58,4 @@ srun -n ${NTASKSTOTAL} -c ${NCORESPERTASK} \
   shifter \
     --volume="/global/project:/project" \
     --image=${IMG} \
-    ${SCRIPTLOC} ${CAFEEXE} ${TIME_REQ_M} ${UNITSAFETIME_M} ${OUTDIR} ${SYSTLIST} ${SAMPLELIST} ${THROWTYPE} ${PENALTY} ${HIERARCHY} ${OSCVARS}
+    ${SCRIPT} ${CAFEEXE} ${TIME_REQ_M} ${UNITSAFETIME_M} ${OUTDIR} ${SYSTLIST} ${SAMPLELIST} ${THROWTYPE} ${PENALTY} ${HIERARCHY} ${OSCVARS}
